--- a/FISH.cabal
+++ b/FISH.cabal
@@ -24,11 +24,13 @@ extra-source-files: CHANGELOG.md
 executable FISH
     main-is:          Main.hs
 
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
+    --Modules included in this executable, other than Main.
+    other-modules: Token.Util.EagerCollapsible
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.15.0.0
     hs-source-dirs:   app
+                      app/Token
+                      app/Token/Util
     default-language: Haskell2010
