--- a/FISH.cabal
+++ b/FISH.cabal
@@ -25,12 +25,44 @@ executable FISH
     main-is:          Main.hs
 
     --Modules included in this executable, other than Main.
-    other-modules: Token.Util.EagerCollapsible
+    other-modules:
+        Lexer
+      , Token.Bracket
+      , Token.Control
+      , Token.Data
+      , Token.Identifier
+      , Token.Keyword
+      , Token.Operator
+      , Token.Util.EagerCollapsible
+      , Token.Util.Like
+      , EagerCollapsibleTest
+      , EagerCollapsibleTest Token.Util.EagerCollapsible
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.15.0.0
+    build-depends:    
+        base ^>=4.15.0.0
+      , tasty >= 0.7 && < 1.4.1
+      , tasty-hunit ^>=0.10.0.3
     hs-source-dirs:   app
                       app/Token
                       app/Token/Util
+                      Test
     default-language: Haskell2010
+
+test-suite test
+    default-language:
+        Haskell2010
+    type:
+        exitcode-stdio-1.0
+    hs-source-dirs:
+        Test
+        app
+        app/Token
+        app/Token/Util
+    main-is:
+        MainTest.hs
+    build-depends:
+        base ^>=4.15.0.0
+      , tasty >= 0.7 && < 1.4.1
+      , tasty-hunit ^>=0.10.0.3
