minor tweaks and a some short confusion over a shadow process not allowing gcc to link files

--- a/FISH.cabal
+++ b/FISH.cabal
@@ -34,6 +34,7 @@ executable FISH
       , Token.Keyword
       , Token.Operator
       , Token.Util.EagerCollapsible
+      , Token.Util.NestedCollapsible
       , Token.Util.Like
       , EagerCollapsibleTest
       , EagerCollapsibleTest Token.Util.EagerCollapsible
