--- a/FISH.cabal
+++ b/FISH.cabal
@@ -149,3 +149,30 @@ test-suite Token_Util_NestedCollapsible
         base ^>=4.15.0.0
       , tasty >= 0.7 && < 1.4.1
       , tasty-hunit ^>=0.10.0.3
+
+test-suite Grammar_GrammarRules
+    default-language:
+        Haskell2010
+    type:
+        exitcode-stdio-1.0
+    hs-source-dirs:
+        Test
+        app
+    main-is:
+        GrammarRulesTest.hs
+    other-modules:
+        Grammar.GrammarRules,
+        Lexer,
+        Token.Bracket,
+        Token.Control,
+        Token.Data,
+        Token.Keyword,
+        Token.Operator,
+        Token.Util.Like,
+        Token.Util.String,
+        Token.Util.NestedCollapsible,
+        Token.Util.EagerCollapsible
+    build-depends:
+        base ^>=4.15.0.0
+      , tasty >= 0.7 && < 1.4.1
+      , tasty-hunit ^>=0.10.0.3
