--- a/FISH.cabal
+++ b/FISH.cabal
@@ -42,11 +42,11 @@ executable FISH
                       Test
     default-language: Haskell2010
 
-executable FISHParseTreeIO
+executable FISHSyntaxTreeIO
     main-is: PTIO.hs
     other-modules:
         Lexer,
-        ParseTree
+        SyntaxTree
     build-depends:
         base ^>=4.15.0.0
     hs-source-dirs: app
