--- a/FISH.cabal
+++ b/FISH.cabal
@@ -30,13 +30,14 @@ executable FISH
 
 
     -- LANGUAGE extensions used by modules in this package.
+    other-extensions: MagicHash
     -- other-extensions:
     build-depends:    
         base ^>=4.15.0.0
+      , ghc-prim >= 0.7.0
       , tasty >= 0.7 && < 1.4.1
       , tasty-hunit ^>=0.10.0.3
     hs-source-dirs:   app
-                      app/Grammar
                       app/Token
                       app/Token/Util
                       Test
@@ -46,67 +47,78 @@ executable FISHSyntaxTreeIO
     main-is: PTIO.hs
     other-modules:
         Lexer,
-        SyntaxTree
+        SyntaxTree,
+        Exception.Base,
+        Token.Control,
+        Token.Bracket,
+        Token.Data,
+        Token.Keyword,
+        Token.Operator,
+        Token.Util.EagerCollapsible,
+        Token.Util.Like,
+        Token.Util.NestedCollapsible,
+        Token.Util.String,
+        Token.Util.Tree
     build-depends:
         base ^>=4.15.0.0
+        , ghc-prim >= 0.7.0
     hs-source-dirs: app
-                    app/Grammar
                     app/Token
                     app/Token/Util
                     Test
     default-language: Haskell2010
 
-test-suite Token_Util_EagerCollapsible
-    default-language:
-        Haskell2010
-    type:
-        exitcode-stdio-1.0
-    hs-source-dirs:
-        Test
-        app
-    main-is:
-        EagerCollapsibleTest.hs
-    other-modules:
-        Token.Util.EagerCollapsible
-    build-depends:
-        base ^>=4.15.0.0
-      , tasty >= 0.7 && < 1.4.1
-      , tasty-hunit ^>=0.10.0.3
+-- test-suite Token_Util_EagerCollapsible
+--     default-language:
+--         Haskell2010
+--     type:
+--         exitcode-stdio-1.0
+--     hs-source-dirs:
+--         Test
+--         app
+--     main-is:
+--         EagerCollapsibleTest.hs
+--     other-modules:
+--         Token.Util.EagerCollapsible
+--     build-depends:
+--         base ^>=4.15.0.0
+--       , tasty >= 0.7 && < 1.4.1
+--       , tasty-hunit ^>=0.10.0.3
 
-test-suite Token_Data
-    default-language:
-        Haskell2010
-    type:
-        exitcode-stdio-1.0
-    hs-source-dirs:
-        Test
-        app
-    main-is:
-        TokenDataTest.hs
-    other-modules:
-        Token.Data,
-        Token.Util.EagerCollapsible,
-        Token.Util.Like,
-        Token.Util.String
-    build-depends:
-        base ^>=4.15.0.0
-      , tasty >= 0.7 && < 1.4.1
-      , tasty-hunit ^>=0.10.0.3
+-- test-suite Token_Data
+--     default-language:
+--         Haskell2010
+--     type:
+--         exitcode-stdio-1.0
+--     hs-source-dirs:
+--         Test
+--         app
+--     main-is:
+--         TokenDataTest.hs
+--     other-modules:
+--         Token.Data,
+--         Token.Util.EagerCollapsible,
+--         Token.Util.Like,
+--         Token.Util.String
+--     build-depends:
+--         base ^>=4.15.0.0
+--       , tasty >= 0.7 && < 1.4.1
+--       , tasty-hunit ^>=0.10.0.3
 
-test-suite Token_Util_NestedCollapsible
-    default-language:
-        Haskell2010
-    type:
-        exitcode-stdio-1.0
-    hs-source-dirs:
-        Test
-        app
-    main-is:
-        NestedCollapsibleTest.hs
-    other-modules:
-        Token.Util.NestedCollapsible,
-        Token.Util.EagerCollapsible
-    build-depends:
-        base ^>=4.15.0.0
-      , tasty >= 0.7 && < 1.4.1
-      , tasty-hunit ^>=0.10.0.3
+-- test-suite Token_Util_NestedCollapsible
+--     default-language:
+--         Haskell2010
+--     type:
+--         exitcode-stdio-1.0
+--     hs-source-dirs:
+--         Test
+--         app
+--     main-is:
+--         NestedCollapsibleTest.hs
+--     other-modules:
+--         Token.Util.NestedCollapsible,
+--         Token.Util.EagerCollapsible
+--     build-depends:
+--         base ^>=4.15.0.0
+--       , tasty >= 0.7 && < 1.4.1
+--       , tasty-hunit ^>=0.10.0.3
