--- a/FISH.cabal
+++ b/FISH.cabal
@@ -68,6 +68,32 @@ executable FISHSyntaxTreeIO
                     Test
     default-language: Haskell2010
 
+executable FISHCalculator
+    main-is: Calculator.hs
+    other-modules:
+        ExecutionTree,
+        Lexer,
+        SyntaxTree,
+        Exception.Base,
+        Token.Control,
+        Token.Bracket,
+        Token.Data,
+        Token.Keyword,
+        Token.Operator,
+        Token.Util.EagerCollapsible,
+        Token.Util.Like,
+        Token.Util.NestedCollapsible,
+        Token.Util.String,
+        Token.Util.Tree
+    build-depends:
+        base ^>=4.15.0.0
+        , ghc-prim >= 0.7.0
+    hs-source-dirs: app
+                    app/Token
+                    app/Token/Util
+                    Test
+    default-language: Haskell2010
+
 -- test-suite Token_Util_EagerCollapsible
 --     default-language:
 --         Haskell2010
