--- a/FISH.cabal
+++ b/FISH.cabal
@@ -62,6 +62,8 @@ executable FISHSyntaxTreeIO
     build-depends:
         base ^>=4.15.0.0
         , ghc-prim >= 0.7.0
+        , tasty >= 0.7 && < 1.4.1
+        , tasty-hunit ^>=0.10.0.3
     hs-source-dirs: app
                     app/Token
                     app/Token/Util
@@ -88,11 +90,30 @@ executable FISHCalculator
     build-depends:
         base ^>=4.15.0.0
         , ghc-prim >= 0.7.0
+        , tasty >= 0.7 && < 1.4.1
+        , tasty-hunit ^>=0.10.0.3
     hs-source-dirs: app
                     app/Token
                     app/Token/Util
                     Test
     default-language: Haskell2010
+
+test-suite TreeInterpreter
+    default-language:
+        Haskell2010
+    type:
+        exitcode-stdio-1.0
+    hs-source-dirs:
+        Test
+        app
+    main-is:
+        TreeInterpreterTest.hs
+    other-modules:
+    build-depends:
+        base ^>=4.15.0.0
+      , ghc-prim >= 0.7.0 
+      , tasty >= 0.7 && < 1.4.1
+      , tasty-hunit ^>=0.10.0.3
 
 -- test-suite Token_Util_EagerCollapsible
 --     default-language:
