--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -1,9 +1,9 @@
 cabal-version:      2.4
-name:               Bream
-version:            0.1.0.0
+name:               Sakana
+version:            0.1.0.1
 
 -- A short (one-line) description of the package.
-synopsis: A syntax-tree based interpreter for the Bream functional language.
+synopsis: A syntax-tree based interpreter for the Sakana functional language.
 
 -- A longer description of the package.
 description: See README.md
@@ -21,7 +21,7 @@ maintainer:         hencutJohnson@gmail.com
 -- category:
 extra-source-files: CHANGELOG.md
 
-executable Bream
+executable Sakana
     main-is:          Main.hs
 
     --Modules included in this executable, other than Main.
@@ -49,15 +49,15 @@ executable Bream
     build-depends:    
         base ^>=4.15.0.0
       , ghc-prim >= 0.7.0
-      , tasty >= 0.7 && < 1.4.1
-      , tasty-hunit ^>=0.10.0.3
+      --, tasty >= 0.7 && < 1.4.1
+      --, tasty-hunit ^>=0.10.0.3
     hs-source-dirs:   app
                       app/Token
                       app/Token/Util
                       Test
     default-language: Haskell2010
 
-executable BreamST
+executable SakanaST
     main-is: PTIO.hs
     other-modules:
         Lexer,
