--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -41,6 +41,7 @@ executable Sakana
         Token.Util.String
         Token.Util.Tree
         Token.Util.EagerCollapsible
+        Token.Util.CollapsibleTerminalCases
 
 
     -- LANGUAGE extensions used by modules in this package.
@@ -72,7 +73,8 @@ executable SakanaST
         Token.Util.Like,
         Token.Util.NestedCollapsible,
         Token.Util.String,
-        Token.Util.Tree
+        Token.Util.Tree,
+        Token.Util.CollapsibleTerminalCases
     build-depends:
         base >= 4.8.0.0
         , ghc-prim >= 0.5.0
@@ -101,22 +103,23 @@ test-suite TreeInterpreter
       , tasty >= 0.7 && < 1.4.1
       , tasty-hunit ^>=0.10.0.3
 
--- test-suite Token_Util_EagerCollapsible
---     default-language:
---         Haskell2010
---     type:
---         exitcode-stdio-1.0
---     hs-source-dirs:
---         Test
---         app
---     main-is:
---         EagerCollapsibleTest.hs
---     other-modules:
---         Token.Util.EagerCollapsible
---     build-depends:
---         base >= 4.8.0.0
---       , tasty >= 0.7 && < 1.4.1
---       , tasty-hunit ^>=0.10.0.3
+test-suite Token_Util_EagerCollapsible
+    default-language:
+        Haskell2010
+    type:
+        exitcode-stdio-1.0
+    hs-source-dirs:
+        Test
+        app
+    main-is:
+        EagerCollapsibleTest.hs
+    other-modules:
+        Token.Util.EagerCollapsible,
+        Token.Util.CollapsibleTerminalCases
+    build-depends:
+        base >= 4.8.0.0
+      , tasty >= 0.7 && < 1.4.1
+      , tasty-hunit ^>=0.10.0.3
 
 -- test-suite Token_Data
 --     default-language:
