--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               Sakana
-version:            0.2.0.1
+version:            0.2.0.2
 
 -- A short (one-line) description of the package.
 synopsis: A syntax-tree based interpreter for the Sakana functional language.
@@ -78,8 +78,8 @@ executable SakanaST
     build-depends:
         base >= 4.8.0.0
         , ghc-prim >= 0.5.0
-        , tasty >= 0.7 && < 1.4.1
-        , tasty-hunit ^>=0.10.0.3
+        -- , tasty >= 0.7 && < 1.4.1
+        -- , tasty-hunit ^>=0.10.0.3
     hs-source-dirs: app
                     app/Token
                     app/Token/Util
