--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -29,6 +29,8 @@ executable Sakana
         Exception.Base
         TreeInterpreter
         TreeInterpreter.Environment
+        TreeInterpreter.LocalCheck.TreeIs
+        TreeInterpreter.LocalCheck.NodeIs
         Lexer
         SyntaxTree
         Token.Bracket
@@ -54,6 +56,8 @@ executable Sakana
       --, tasty-hunit ^>=0.10.0.3
     hs-source-dirs:   app
                       app/Exception
+                      app/TreeInterpreter
+                      app/TreeInterpreter/LocalCheck
                       app/Token
                       app/Util
                       Test
@@ -62,7 +66,7 @@ executable Sakana
 executable SakanaST
     main-is: PTIO.hs
     other-modules:
-
+    
     build-depends:
         base >= 4.8.0.0
         , ghc-prim >= 0.5.0
