--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -45,6 +45,7 @@ executable Sakana
         Util.String
         Util.Tree
         Util.General
+        Paths_Sakana
 
     -- LANGUAGE extensions used by modules in this package.
     other-extensions: MagicHash
@@ -63,22 +64,6 @@ executable Sakana
                       Test
     default-language: Haskell2010
 
-executable SakanaST
-    main-is: PTIO.hs
-    other-modules:
-    
-    build-depends:
-        base >= 4.8.0.0
-        , ghc-prim >= 0.5.0
-        -- , tasty >= 0.7 && < 1.4.1
-        -- , tasty-hunit ^>=0.10.0.3
-    hs-source-dirs: app
-                    app/Exception
-                    app/Token
-                    app/Util
-                    Test
-    default-language: Haskell2010
-
 test-suite TreeInterpreter
     default-language:
         Haskell2010
@@ -90,6 +75,11 @@ test-suite TreeInterpreter
     main-is:
         TreeInterpreterTest.hs
     other-modules:
+        Lexer
+        SyntaxTree
+        Token.Data
+        TreeInterpreter
+        Util.Tree
     build-depends:
         base >= 4.8.0.0
       , ghc-prim >= 0.5.0 
@@ -111,6 +101,40 @@ test-suite Token_Util_EagerCollapsible
         Util.CollapsibleTerminalCases
     build-depends:
         base >= 4.8.0.0
+      , tasty >= 0.7 && < 1.4.1
+      , tasty-hunit ^>=0.10.0.3
+
+test-suite SyntaxTree
+    default-language:
+        Haskell2010
+    type:
+        exitcode-stdio-1.0
+    hs-source-dirs:
+        app
+        app/Util
+        app/Token
+        Test
+    main-is:
+        SyntaxTreeTest.hs
+    other-modules:
+        Exception.Base
+        Lexer
+        SyntaxTree
+        Token.Bracket
+        Token.Control
+        Token.Data
+        Token.Keyword
+        Token.Operator
+        Util.CollapsibleTerminalCases
+        Util.EagerCollapsible
+        Util.General
+        Util.Like
+        Util.NestedCollapsible
+        Util.String
+        Util.Tree
+    build-depends:
+        base >= 4.8.0.0
+      , ghc-prim >= 0.5.0
       , tasty >= 0.7 && < 1.4.1
       , tasty-hunit ^>=0.10.0.3
 
