--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -52,6 +52,7 @@ executable Sakana
     build-depends:    
         base >= 4.8.0.0
       , ghc-prim >= 0.5.0
+      , parsec == 3.1.14.0
       --, tasty >= 0.7 && < 1.4.1
       --, tasty-hunit ^>=0.10.0.3
     hs-source-dirs:   app
@@ -84,6 +85,7 @@ test-suite TreeInterpreter
       , ghc-prim >= 0.5.0 
       , tasty >= 0.7 && < 1.4.1
       , tasty-hunit ^>=0.10.0.3
+      , parsec == 3.1.14.0
 
 test-suite Token_Util_EagerCollapsible
     default-language:
@@ -102,6 +104,7 @@ test-suite Token_Util_EagerCollapsible
         base >= 4.8.0.0
       , tasty >= 0.7 && < 1.4.1
       , tasty-hunit ^>=0.10.0.3
+      , parsec == 3.1.14.0
 
 test-suite SyntaxTree
     default-language:
@@ -136,6 +139,7 @@ test-suite SyntaxTree
       , ghc-prim >= 0.5.0
       , tasty >= 0.7 && < 1.4.1
       , tasty-hunit ^>=0.10.0.3
+      , parsec == 3.1.14.0
 
 -- test-suite Token_Data
 --     default-language:
