--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -31,8 +31,7 @@ executable Sakana
         TreeInterpreter.Environment
         TreeInterpreter.LocalCheck.TreeIs
         TreeInterpreter.LocalCheck.NodeIs
-        Lexer
-        SyntaxTree
+        SakanaParser
         Token.Bracket
         Token.Control
         Token.Data
@@ -75,8 +74,7 @@ test-suite TreeInterpreter
     main-is:
         TreeInterpreterTest.hs
     other-modules:
-        Lexer
-        SyntaxTree
+        SakanaParser
         Token.Data
         TreeInterpreter
         Util.Tree
@@ -106,7 +104,7 @@ test-suite Token_Util_EagerCollapsible
       , tasty-hunit ^>=0.10.0.3
       , parsec == 3.1.14.0
 
-test-suite SyntaxTree
+test-suite SakanaParser
     default-language:
         Haskell2010
     type:
@@ -120,8 +118,7 @@ test-suite SyntaxTree
         SyntaxTreeTest.hs
     other-modules:
         Exception.Base
-        Lexer
-        SyntaxTree
+        SakanaParser
         Token.Bracket
         Token.Control
         Token.Data
