--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -52,6 +52,8 @@ executable Sakana
         base >= 4.8.0.0
       , ghc-prim >= 0.5.0
       , parsec == 3.1.14.0
+      , unordered-containers == 0.2.14.0
+      , hashable >= 1.3.3.0
     hs-source-dirs:   app
                       app/Exception
                       app/TreeInterpreter
