--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -97,6 +97,8 @@ test-suite TreeInterpreter
       , tasty >= 0.7 && < 1.4.1
       , tasty-hunit ^>=0.10.0.3
       , parsec == 3.1.14.0
+      , unordered-containers == 0.2.14.0
+      , hashable >= 1.3.3.0
 
 test-suite Token_Util_EagerCollapsible
     default-language:
