--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -31,7 +31,8 @@ executable Sakana
         TreeInterpreter.Environment
         TreeInterpreter.LocalCheck.TreeIs
         TreeInterpreter.LocalCheck.NodeIs
-        SakanaParser
+        Parser
+        Parser.Core
         Syntax
         Util.Like
         Util.String
@@ -55,23 +56,54 @@ executable Sakana
                       app/TreeInterpreter
                       app/TreeInterpreter/LocalCheck
                       app/Util
+                      app/Parser
+                      app/Test
                       Test
     default-language: Haskell2010
 
-test-suite SakanaParser
+-- test-suite SakanaParser
+--     default-language:
+--         Haskell2010
+--     type:
+--         exitcode-stdio-1.0
+--     hs-source-dirs:
+--         app
+--         app/Util
+--         Test
+--     main-is:
+--         SyntaxTreeTest.hs
+--     other-modules:
+--         Exception.Base
+--         SakanaParser
+--         Syntax
+--         Util.General
+--         Util.Like
+--         Util.String
+--         Util.Tree
+--         Util.Classes
+--     build-depends:
+--         base >= 4.8.0.0
+--       , ghc-prim >= 0.5.0
+--       , tasty >= 0.7 && < 1.4.1
+--       , tasty-hunit ^>=0.10.0.3
+--       , parsec == 3.1.14.0
+--       , hashable == 1.3.3.0
+--       , unordered-containers == 0.2.14.0
+      
+test-suite ParserTest
     default-language:
         Haskell2010
     type:
         exitcode-stdio-1.0
     hs-source-dirs:
-        app
-        app/Util
         Test
+        app
     main-is:
-        SyntaxTreeTest.hs
+        ParserTest.hs
     other-modules:
+        Test.Core
+        Parser.Core
         Exception.Base
-        SakanaParser
         Syntax
         Util.General
         Util.Like
@@ -86,4 +118,3 @@ test-suite SakanaParser
       , parsec == 3.1.14.0
       , hashable == 1.3.3.0
       , unordered-containers == 0.2.14.0
-      
