Instituting a somewhat harebrained data type for std lib functions, so I may end up rolling this commit back

--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -32,6 +32,7 @@ executable Sakana
         Interpreter.Inspection
         Interpreter.SknStdLib.Std
         Interpreter.SknStdLib.IO
+        Interpreter.SknStdLib.Type
         Parser
         Parser.Core
         Syntax
