--- a/Sakana.cabal
+++ b/Sakana.cabal
@@ -27,7 +27,7 @@ executable Sakana
     --Modules included in this executable, other than Main.
     other-modules:
         Exception.Base
-        Interpreter.Core
+        Interpreter
         Interpreter.Environment
         Interpreter.Inspection
         Interpreter.SknStdLib.Std
